...
                                    Label("Logout", systemImage: "rectangle.portrait.and.arrow.right")
                                }
                            )
                        } label: {
                            Image(systemName: "gearshape.fill")
                        }
                        .accessibilityIdentifier("settingsMenuButton")
                    }
                }
                .sheet(isPresented: $showingSettings) {
                    if let primaryKey = try? primaryKeyProvider.getPrimaryKey() {
                        SettingsView(viewModel: settingsViewModel, primaryKey: primaryKey)
                    }
...
